@@ -6,8 +6,6 @@
           android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application android:icon="@drawable/icon"
@@ -32,7 +30,6 @@
                 <data android:mimeType="application/pls"/>
                 <data android:mimeType="audio/x-scpls"/>
                 <data android:mimeType="audio/x-mpegurl"/>
-                <action android:name="android.intent.action.MEDIA_MOUNTED"/>
                 <data android:scheme="file"/>
             </intent-filter>
 
