@@ -1,3 +1,12 @@
+2014-09-08  pads  <pads@myhouseyourhouse.net>
+
+    * AndroidManifest.xml:
+    - Remove SD card unmount and write to external storage permissions.
+
+    * src/net/yourhouse/myhouse/www/RadioApp.java:
+    - Remove remaining Nagare references.
+    - Remove error handling for writing to SD card.
+
 2014-09-07  pads  <pads@myhouseyourhouse.net>
 
     * AndroidManifest.xml:
